--- a/eventsSection.html
+++ b/eventsSection.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TheEvent - Bootstrap Event Template</title>
+  <title>Events</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -51,7 +51,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
+          <li><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li class="menu-active"><a href="#EventsSection">Events</a></li>
           <!-- <li><a href="#schedule">Schedule</a></li>
@@ -336,103 +336,194 @@
     <section id="speakers" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
-          <h2>Event Speakers</h2>
+          <h2>Event List</h2>
           <p>Here are some of our speakers</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Brenden Legros</a></h3>
-                <p>Quas alias incidunt</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+
+        <div id="Tech-Events">
+
+          <h3>Tech Events</h3>
+
+          <div class="row">
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Hubert Hirthe</a></h3>
-                <p>Consequuntur odio aut</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Cole Emmerich</a></h3>
-                <p>Fugiat laborum et</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Jack Christiansen</a></h3>
-                <p>Debitis iure vero</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Alejandrin Littel</a></h3>
-                <p>Qui molestiae natus</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Willow Trantow</a></h3>
-                <p>Non autem dicta</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
               </div>
             </div>
+
           </div>
         </div>
+
+        <div id="Fun-Events">
+
+          <h3>Fun Events</h3>
+
+          <div class="row">
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div id="Workshops">
+
+          <h3>Workshops</h3>
+
+          <div class="row">
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div id="Exhibitions">
+
+          <h3>Exhibitions</h3>
+
+          <div class="row">
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <a href="speaker-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
       </div>
+
+
 
     </section>
 
