Navbar perfectly working (Dropdown to be applied only on the eventsSection.html). Inno logo added(the text is also set, in case)

--- a/eventsSection.html
+++ b/eventsSection.html
@@ -45,15 +45,25 @@
 
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
-        <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="#intro" class="scrollto"><img src="img/logo.png" alt="" title=""></a>
+        <a href="#intro" class="scrollto"><img src="img/Innovision_Logo.png" alt="" title="Innovision'19"></a>
+        <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li class="menu-active"><a href="#EventsSection">Events</a></li>
+          <li class="dropdown menu-active">
+
+            <a class="dropbtn">Events</a>
+            <div class="dropdown-content">
+              <a href="#Tech-Events">Tech Events</a>
+              <a href="#Fun-Events">Fun Events</a>
+              <a href="#Workshops">Workshops</a>
+              <a href="#Exhibitions">Exhibitions</a>
+            </div>
+
+          </li>
           <!-- <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
           <li><a href="#hotels">Hotels</a></li>
