Navbar modified, working properly. scrollTop value for header changed to 65. speaker-details filename changed to event-details.

--- a/event-details.html
+++ b/event-details.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TheEvent - Bootstrap Event Template</title>
+  <title>Event Details</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -40,33 +40,44 @@
   <!--==========================
     Header
   ============================-->
-  <header id="header" class="header-fixed">
+  <header id="header">
     <div class="container">
 
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
-        <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="index.html#intro" class="scrollto"><img src="img/logo.png" alt="" title=""></a>
+        <a href="#intro" class="scrollto"><img src="img/Innovision_Logo.png" alt="" title="Innovision'19"></a>
+        <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
-          <li><a href="index.html#about">About</a></li>
-          <li><a href="index.html#speakers">Speakers</a></li>
-          <li><a href="index.html#schedule">Schedule</a></li>
-          <li><a href="index.html#venue">Venue</a></li>
-          <li><a href="index.html#hotels">Hotels</a></li>
-          <li><a href="index.html#gallery">Gallery</a></li>
-          <li><a href="index.html#supporters">supporters</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
-          <li class="buy-tickets"><a href="index.html#buy-tickets">Buy Tickets</a></li>
+          <li><a href="#intro">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li class="dropdown menu-active">
+
+            <a class="dropbtn">Events</a>
+            <div class="dropdown-content">
+              <a href="eventsSection.html#EventsSection">Event Schedule</a>
+              <a href="eventsSection.html#Tech-Events">Tech Events</a>
+              <a href="eventsSection.html#Fun-Events">Fun Events</a>
+              <a href="eventsSection.html#Workshops">Workshops</a>
+              <a href="eventsSection.html#Exhibitions">Exhibitions</a>
+            </div>
+
+          </li>
+          <!-- <li><a href="#schedule">Schedule</a></li>
+          <li><a href="#venue">Venue</a></li>
+          <li><a href="#hotels">Hotels</a></li> -->
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#supporters">Sponsors</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
 
-  <main id="main" class="main-page">
+  <!-- <main id="main" class="main-page"> -->
 
     <!--==========================
       Speaker Details Section
@@ -74,7 +85,7 @@
     <section id="speakers-details" class="wow fadeIn">
       <div class="container">
         <div class="section-header">
-          <h2>Speaker Details</h2>
+          <h2>Event Details</h2>
           <p>Praesentium ut qui possimus sapiente nulla.</p>
         </div>
 
@@ -93,19 +104,19 @@
                 <a href=""><i class="fa fa-linkedin"></i></a>
               </div>
               <p>Voluptatem perferendis sed assumenda voluptatibus. Laudantium molestiae sint. Doloremque odio dolore dolore sit. Quae labore alias ea omnis ex expedita sapiente molestias atque. Optio voluptas et.</p>
- 
-              <p>Aboriosam inventore dolorem inventore nam est esse. Aperiam voluptatem nisi molestias laborum ut. Porro dignissimos eum. Tempore dolores minus unde est voluptatum incidunt ut aperiam.</p> 
+
+              <p>Aboriosam inventore dolorem inventore nam est esse. Aperiam voluptatem nisi molestias laborum ut. Porro dignissimos eum. Tempore dolores minus unde est voluptatum incidunt ut aperiam.</p>
 
               <p>Et dolore blanditiis officiis non quod id possimus. Optio non commodi alias sint culpa sapiente nihil ipsa magnam. Qui eum alias provident omnis incidunt aut. Eius et officia corrupti omnis error vel quia omnis velit. In qui debitis autem aperiam voluptates unde sunt et facilis.</p>
             </div>
           </div>
-          
+
         </div>
       </div>
 
     </section>
 
-  </main>
+  <!-- </main> -->
 
 
   <!--==========================
