--- a/eventsSection.html
+++ b/eventsSection.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Events</title>
+  <title>Events Section</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -66,8 +66,8 @@
           </li>
           <!-- <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
-          <li><a href="#hotels">Hotels</a></li>
-          <li><a href="#gallery">Gallery</a></li> -->
+          <li><a href="#hotels">Hotels</a></li> -->
+          <li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>
           <li><a href="#contact">Contact</a></li>
           <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
@@ -359,37 +359,37 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
               </div>
             </div>
 
@@ -404,37 +404,37 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
               </div>
             </div>
 
@@ -449,37 +449,37 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
               </div>
             </div>
 
@@ -494,37 +494,37 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <a href="speaker-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
+                <a href="event-details.html"><img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
               </div>
             </div>
 
