event details section modified. event register button added. footer untouched.

--- a/event-details.html
+++ b/event-details.html
@@ -85,30 +85,50 @@
     <section id="speakers-details" class="wow fadeIn">
       <div class="container">
         <div class="section-header">
-          <h2>Event Details</h2>
-          <p>Praesentium ut qui possimus sapiente nulla.</p>
+          <h2>Event Name</h2>
+          <p>
+            <b>Date : </b> date <br>
+            <b>Time : </b> time <br>
+            <b>Venue : </b> venue <br>
+            <div class="event-register"><a href="#">Register</a></div>    <!-- register button for events -->
+          </p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
-            <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="img/speakers/1.jpg" title="Event name" class="img-fluid">
           </div>
 
           <div class="col-md-6">
             <div class="details">
-              <h2>Brenden Legros</h2>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
+              <h2>Event Description</h2>
+
               <p>Voluptatem perferendis sed assumenda voluptatibus. Laudantium molestiae sint. Doloremque odio dolore dolore sit. Quae labore alias ea omnis ex expedita sapiente molestias atque. Optio voluptas et.</p>
 
-              <p>Aboriosam inventore dolorem inventore nam est esse. Aperiam voluptatem nisi molestias laborum ut. Porro dignissimos eum. Tempore dolores minus unde est voluptatum incidunt ut aperiam.</p>
-
-              <p>Et dolore blanditiis officiis non quod id possimus. Optio non commodi alias sint culpa sapiente nihil ipsa magnam. Qui eum alias provident omnis incidunt aut. Eius et officia corrupti omnis error vel quia omnis velit. In qui debitis autem aperiam voluptates unde sunt et facilis.</p>
             </div>
+
+            <div class="details">
+              <h2>Event Rules</h2>
+
+              <p>Voluptatem perferendis sed assumenda voluptatibus. Laudantium molestiae sint. Doloremque odio dolore dolore sit. Quae labore alias ea omnis ex expedita sapiente molestias atque. Optio voluptas et.</p>
+
+            </div>
+
+            <div class="details">
+              <h2>Judging Criteria</h2>
+
+              <p>Voluptatem perferendis sed assumenda voluptatibus. Laudantium molestiae sint. Doloremque odio dolore dolore sit. Quae labore alias ea omnis ex expedita sapiente molestias atque. Optio voluptas et.</p>
+
+            </div>
+
+            <div class="details">
+              <h2>Coordinators info</h2>
+
+              <p> <b>Name</b> : <em>contact no.</em> </p>
+              <p> <b>Name</b> : <em>contact no.</em> </p>
+
+            </div>
+
           </div>
 
         </div>
