--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!--==========================
       Venue Section
     ============================-->
-    <section id="venue" class="wow fadeInUp">
+    <section id="venue" class="section-with-bg wow fadeInUp">
 
       <div class="container-fluid">
 
@@ -492,21 +492,22 @@
 
     <section id="quotes" class="section-with-bg wow fadeInUp">
 
-      <div id="quote-carousel" class="carousel slide" data-ride="carousel">
+      <div id="quote-carousel" class="carousel slide quote-content" data-ride="false">
 
         <div class="carousel-inner">
 
           <div class="carousel-item active container-fluid">
             <div class="row">
 
-              <div class="name-qoute col-lg-9 col-sm-9 col-8">
+              <div class="col-lg-6 col-sm-9 col-12">
                 <h2 class="quote-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</h2>
-                <img class="quote-image" src="assets/images/speakers/1.jpg" alt="dog-profile">
                 <em>Pebbles, New York</em> <br>
               </div>
 
-              <div class="name-qoute col-lg-3 col-sm-3 col-4">
-                <button class="play-btn btn btn-outline-danger btn-lg" type="button" name="button"><i class="fa fa-play-circle"></i></button>
+              <div class="youtube-link col-lg-6 col-sm-3 col-12">
+                <iframe class="play-btn" src="https://www.youtube.com/embed/zAGVQLHvwOY" frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
               </div>
 
             </div>
@@ -515,14 +516,15 @@
           <div class="carousel-item container-fluid">
             <div class="row">
 
-              <div class="name-quote col-lg-9 col-sm-9 col-8">
+              <div class="col-lg-6 col-sm-9">
                 <h2 class="quote-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</h2>
-                <img class="quote-image" src="assets/images/speakers/2.jpg" alt="lady-profile">
                 <em>Beverly, Illinois</em>
               </div>
 
-              <div class="name-quote col-lg-3 col-sm-3 col-4">
-                <button class="play-btn btn btn-outline-danger btn-lg" type="button" name="button"><i class="fa fa-play-circle"></i></button>
+              <div class="youtube-link col-lg-6 col-sm-3">
+                <iframe class="play-btn" src="https://www.youtube.com/embed/zAGVQLHvwOY" frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
               </div>
 
             </div>
