quote section complete

--- a/index.html
+++ b/index.html
@@ -497,14 +497,14 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active container-fluid">
-            <div class="row">
+            <div class="quote-row row">
 
-              <div class="col-lg-6 col-sm-9 col-12">
+              <div class="col-lg-7 col-md-6 col-sm-6 col-12">
                 <h2 class="quote-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</h2>
                 <em>Pebbles, New York</em> <br>
               </div>
 
-              <div class="youtube-link col-lg-6 col-sm-3 col-12">
+              <div class="youtube-link col-lg-5 col-md-6 col-sm-6 col-12">
                 <iframe class="play-btn" src="https://www.youtube.com/embed/zAGVQLHvwOY" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
@@ -516,12 +516,12 @@
           <div class="carousel-item container-fluid">
             <div class="row">
 
-              <div class="col-lg-6 col-sm-9">
+              <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                 <h2 class="quote-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</h2>
                 <em>Beverly, Illinois</em>
               </div>
 
-              <div class="youtube-link col-lg-6 col-sm-3">
+              <div class="youtube-link col-lg-6 col-md-6 col-sm-6 col-12">
                 <iframe class="play-btn" src="https://www.youtube.com/embed/zAGVQLHvwOY" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
