--- a/index.html
+++ b/index.html
@@ -52,20 +52,22 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <!-- <li><a href="#about">About</a></li> -->
           <li class="dropdown">
 
             <a class="dropbtn dropping">Events</a>
             <div class="dropdown-content">
               <a href="views/eventsSection.html#EventsSection">Event Schedule</a>
-              <a href="views/eventsSection.html#Events">Events</a>
-              <a href="views/eventsSection.html#Workshops">Workshops</a>
-              <a href="views/eventsSection.html#Paid-Workshops">Paid-Workshops</a>
-              <a href="views/eventsSection.html#Cultural">Cultural</a>
+              <a href="views/eventsSection.html#flagships">Flagship Events</a>
+              <a href="views/eventsSection.html#events">Events</a>
+              <a href="views/eventsSection.html#workshops">Workshops</a>
+              <a href="views/eventsSection.html#paidworkshops">Workshops (Paid)</a>
+              <a href="views/eventsSection.html#exhibitions">Exhibitions</a>
+              <a href="views/eventsSection.html#cultural">Cultural</a>
             </div>
 
           </li>
-          <li><a href="views/ISRpage.html">Innovision Social Regime</a></li>
+          <li><a href="views/ISRpage.html">I.S.R</a></li>
           <li><a href="views/FAQ.html">FAQ</a></li>
           <!-- <li><a href="#hotels">Hotels</a></li>
                   <li><a href="#gallery">Gallery</a></li> -->
