--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <li><a href="#gallery">Gallery</a></li> -->
           <li><a href="views/sponsor.html">Sponsors</a></li>
           <!-- <li><a href="#contact">Contact</a></li> -->
-          <li class="buy-tickets"><a href="views/login.html">Login/Register</a></li>
+          <li class="buy-tickets" id="log_btn"><a href="views/login.html">Login/Register</a></li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -684,6 +684,23 @@
 
   <!-- Template Main Javascript File -->
   <script src="assets/js/main.js"></script>
+  <script>
+    var q = localStorage.getItem("token");
+      if(q)
+      {
+            $.ajax({
+                url:'apis/user/auth/profile.php',
+                beforeSend: function(request){
+                    request.setRequestHeader('Authorization', 'Bearer ' + q);
+                },
+                type: 'get',
+                    success:function(response)
+                    {
+                   $("#log_btn").hide();
+              }
+            });
+      }
+  </script>
 </body>
 
 </html>
