headers have been modified, footers still have dummy content. index page gallery all set. login page required styles done. Faq page questions modified. unnecessary images deleted.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="assets/images/favicon.png" rel="icon">
+  <link href="assets/images/Innovision_Logo.ico" rel="icon">
   <link href="assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -103,8 +103,8 @@
       <div class="container-fluid">
 
         <div class="section-header">
-          <h2>Event Venue</h2>
-          <p>Event venue location info and gallery</p>
+          <h2>Gallery</h2>
+          <p>moments captured during Innovision'18</p>
         </div>
       </div>
 
@@ -113,64 +113,96 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/images/venue-gallery/1.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="assets/images/venue-gallery/1.jpg" alt="" class="img-fluid">
+              <a href="assets/images/home_page_gallery/1.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/1.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/images/venue-gallery/2.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="assets/images/venue-gallery/2.jpg" alt="" class="img-fluid">
+              <a href="assets/images/home_page_gallery/2-8.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/2-8.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/images/venue-gallery/3.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="assets/images/venue-gallery/3.jpg" alt="" class="img-fluid">
+              <a href="assets/images/home_page_gallery/DSC00048-2-2.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/DSC00048-2-2.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/images/venue-gallery/4.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="assets/images/venue-gallery/4.jpg" alt="" class="img-fluid">
+              <a href="assets/images/home_page_gallery/DSC00289.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/DSC00289.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/images/venue-gallery/5.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="assets/images/venue-gallery/5.jpg" alt="" class="img-fluid">
+              <a href="assets/images/home_page_gallery/DSC_0069.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/DSC_0069.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/images/venue-gallery/6.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="assets/images/venue-gallery/6.jpg" alt="" class="img-fluid">
+              <a href="assets/images/home_page_gallery/DSC_0081.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/DSC_0081.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/images/venue-gallery/7.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="assets/images/venue-gallery/7.jpg" alt="" class="img-fluid">
+              <a href="assets/images/home_page_gallery/DSC_0179.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/DSC_0179.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/images/venue-gallery/8.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="assets/images/venue-gallery/8.jpg" alt="" class="img-fluid">
+              <a href="assets/images/home_page_gallery/DSC_2590.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/DSC_2590.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/images/home_page_gallery/DSC_4868-4.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/DSC_4868-4.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/images/home_page_gallery/DSC_6207.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/DSC_6207.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/images/home_page_gallery/IMG_1782.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/IMG_1782.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/images/home_page_gallery/IMG_7685.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/images/home_page_gallery/IMG_7685.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -492,7 +524,7 @@
 
     <!-- ========== -->
 
-    <section id="quotes" class="section-with-bg wow fadeInUp">
+    <!-- <section id="quotes" class="section-with-bg wow fadeInUp">
 
       <div id="quote-carousel" class="carousel slide quote-content" data-ride="false">
 
@@ -544,7 +576,7 @@
 
       </div>
 
-    </section>
+    </section> -->
 
     <!-- ========== -->
 
@@ -560,17 +592,30 @@
       <div class="row">
         <div class="col-lg-6">
           <h2>About The Event</h2>
-          <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in est ut optio sequi
-            unde.
+          <p>
+            Innovision is the annual techno-management festival of NIT Rourkela organised by the students. It has been
+            fuelling innovations and encouraging millions since 2004 and is a unique forum where the youth gets the
+            opportunity to explore and experience science and technology in all its myriad forms. Seminars and workshops
+            under the guidance of eminent personalities, nerve wrecking Robowars, mindboggling code rage, and marketing
+            extravaganza are the star features of the fest. The attendees get hands-on experience in technical aspects
+            and also get to interact with fellow tech-enthusiasts. It has been honoured by laudable personalities like
+            Ugesh Sarkar and Sudarshan Patnaik.
           </p>
+          <p>
+            Technology is handicapped if devoid of resources whose existence is incessantly threatened by our
+            thoughtless activities. So, it falls on our shoulders to introspect and start caring about the environment,
+            so this year INNOVISION brings forth the concept of “clean and green”. A humble effort, towards a better
+            future.
+          </p>
+          <p>Join us and be a part of the tech-nostalgia!</p>
         </div>
         <div class="col-lg-3">
           <h3>Where</h3>
-          <p>Downtown Conference Center, New York</p>
+          <p>NIT Rourkela, Sector-2, Rourkela-8, Odisha.</p>
         </div>
         <div class="col-lg-3">
           <h3>When</h3>
-          <p>Monday to Wednesday<br>10-12 December</p>
+          <p>Friday to Sunday<br>1-3 November</p>
         </div>
       </div>
     </div>
@@ -596,10 +641,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="www.nitrkl.ac.in">NITR home page</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="https://twitter.com/nitrourkela?s=17">NITR Twitter</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Follow us</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
