dummy content removed from every where.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Libraries CSS Files -->
   <link href="assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="assets/lib/animate/animate.min.css" rel="stylesheet">
+  <!-- <link href="assets/lib/animate/animate.min.css" rel="stylesheet"> -->
   <link href="assets/lib/venobox/venobox.css" rel="stylesheet">
   <link href="assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
@@ -87,7 +87,7 @@
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <h1 class="mb-4 pb-0">The Annual<br><span>Tech-Fest</span><br> of NITR</h1>
-      <p class="mb-4 pb-0">3-5 November, Downtown Conference Center, New York</p>
+      <p class="mb-4 pb-0">1-3 November, NIT Rourkela, Rourkela-8, Odisha.</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Fest</a>
     </div>
@@ -590,32 +590,30 @@
   <section id="about">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
-          <h2>About The Event</h2>
-          <p>
-            Innovision is the annual techno-management festival of NIT Rourkela organised by the students. It has been
-            fuelling innovations and encouraging millions since 2004 and is a unique forum where the youth gets the
-            opportunity to explore and experience science and technology in all its myriad forms. Seminars and workshops
-            under the guidance of eminent personalities, nerve wrecking Robowars, mindboggling code rage, and marketing
-            extravaganza are the star features of the fest. The attendees get hands-on experience in technical aspects
-            and also get to interact with fellow tech-enthusiasts. It has been honoured by laudable personalities like
-            Ugesh Sarkar and Sudarshan Patnaik.
+        <div class="about-inno row">
+          <h2 class="col-lg-12">About The Event</h2>
+          <p class="col-lg-6">
+            Innovision, the annual techno-management fest of NIT Rourkela is organized in the first week of November
+            spanning over three days and three nights. Commenced with a motto of providing technocrats all over the
+            country a platform to showcase their technical skills and talent, Innovision has come a long way over the
+            years since its inception.
           </p>
-          <p>
-            Technology is handicapped if devoid of resources whose existence is incessantly threatened by our
-            thoughtless activities. So, it falls on our shoulders to introspect and start caring about the environment,
-            so this year INNOVISION brings forth the concept of “clean and green”. A humble effort, towards a better
-            future.
+          <p class="col-lg-6">
+            It is one of the largest technical fests in the eastern region of the Indian subcontinent today which has
+            made an impact on several college going students across the country. With different, captivating themes each
+            year, the fest has recorded an immense participation in the past and this year will be no different.
           </p>
-          <p>Join us and be a part of the tech-nostalgia!</p>
+          <p class="col-lg-4 offset-lg-4">Brace yourselves as the much awaited fest, INNOVISION 2K19 with ‘A Space Opera’ as its theme, takes off
+            this November!
+          </p>
         </div>
-        <div class="col-lg-3">
+        <div class="info col-lg-4">
           <h3>Where</h3>
-          <p>NIT Rourkela, Sector-2, Rourkela-8, Odisha.</p>
+          <p>NIT Rourkela, Sector-1, Rourkela-8, Odisha.</p>
         </div>
-        <div class="col-lg-3">
+        <div class="info col-lg-4 offset-lg-4">
           <h3>When</h3>
-          <p>Friday to Sunday<br>1-3 November</p>
+          <p>Friday to Sunday : 1-3 November</p>
         </div>
       </div>
     </div>
@@ -632,20 +630,21 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <img src="assets/images/inno_logo.png" alt="Inno logo">
-            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro.
-              Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore
-              consequatur ad voluptate
-              cupiditate debitis accusamus repellat cumque.</p>
+            <p>Innovision is the annual techno-management festival of NIT Rourkela organized by the students. It has
+              been fuelling innovations and encouraging millions since 2004 and is a unique forum where the youth gets
+              the opportunity to explore and experience science and technology in all its myriad forms.
+            .</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="www.nitrkl.ac.in">NITR home page</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="https://www.nitrkl.ac.in/SAC/">SAC @NITR</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="http://gallery.nitrkl.ac.in/">NITR gallery</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="https://twitter.com/nitrourkela?s=17">NITR Twitter</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Follow us</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="https://mondaymorning.nitrkl.ac.in">Monday Morning
+                  @NITR</a></li>
             </ul>
           </div>
 
@@ -666,7 +665,7 @@
               <b>Student Activity Center</b> <br>
               <strong>National Institute of Technology</strong> <br>
               <em>Sector 1, Rourkela - 769008</em> <br>
-              <strong>Phone:</strong> +1 5589 55488 55 <br>
+              <strong>Phone:</strong> +91 9668081541 <br>
               <strong>Email:</strong> <a href="mailto:contactus@innonitr.com">contactus@innonitr.com</a> <br>
             </p>
 
@@ -683,10 +682,11 @@
           <div class="col-lg-3 col-md-6 footer-info">
             <a href="https://www.nitrkl.ac.in" target="_blank"> <img src="assets/images/nitrlogo.png"
                 alt="NITR Logo"> </a>
-            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro.
-              Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore
-              consequatur ad voluptate
-              cupiditate debitis accusamus repellat cumque.
+            <p>NIT Rourkela (formerly REC Rourkela) is an institute of national importance, with UG, PG, and research
+              programs in engineering and science. It is a publicly funded institute of higher learning for engineering
+              and technology located in the steel city of Rourkela, Odisha, India. It is one of the 30 National
+              Institutes of Technology in India and has been recognized as an Institute of National Importance by the
+              National Institutes of Technology Act, 2007.
             </p>
           </div>
 
@@ -705,7 +705,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-        Designed by <a href="#">Innovision Web Team</a>
+        Designed by <a href="#">Innovision Tech Team</a>
       </div>
     </div>
   </footer>
