hid the ISR links..

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
 
           </li>
-          <li><a href="views/ISRpage.html">I.S.R</a></li>
+          <!-- <li><a href="views/ISRpage.html">I.S.R</a></li> -->
           <li><a href="views/FAQ.html">FAQ</a></li>
           <!-- <li><a href="#hotels">Hotels</a></li>
                   <li><a href="#gallery">Gallery</a></li> -->
