--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use a text logo -->
                 <a href="#" class="scrollto"><img src="assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-                <h1><a href="#"><span>inno'19</span></a></h1>
+                <h1><a href="#"><span>innovision'19</span></a></h1>
             </div>
 
             <nav id="nav-menu-container">
@@ -63,7 +63,7 @@
                             <a href="views/eventsSection.html#workshops1">Workshops</a>
                             <a href="views/eventsSection.html#workshops2">Workshops (Paid)</a>
                             <a href="views/eventsSection.html#exhibitions1">Exhibitions</a>
-                            <a href="views/eventsSection.html#cultural1">Cultural</a>
+                            <a href="views/eventsSection.html#cultural1">Pro Shows</a>
                         	<a href="views/eventsSection.html#funevents1">Fun Events</a>
                         	<a href="views/eventsSection.html#preinnoevents1">Pre-inno Events</a>
                         	<a href="views/eventsSection.html#special1">Special Events</a>
@@ -90,7 +90,7 @@
     <section id="intro">
         <div class="intro-container wow fadeIn">
             <h1 class="mb-4 pb-0">The Annual<br><span>Tech-Fest</span><br> of NITR</h1>
-            <p class="mb-4 pb-0">1-3 November, NIT Rourkela, Rourkela-8, Odisha.</p>
+            <p class="mb-4 pb-0">1-3 November <br> NIT Rourkela, Rourkela-8, Odisha.</p>
             <a href="https://youtu.be/yqHB5hla5mg" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
             <a href="#about" class="about-btn scrollto">About The Fest</a>
         </div>
@@ -284,7 +284,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-inno row">
-                    <h2 class="col-lg-12">About The Event</h2>
+                    <h2 class="col-lg-12">About The Fest</h2>
                     <p class="col-lg-6">
                         Innovision, the annual techno-management fest of NIT Rourkela is organized in the first week of November spanning over three days and three nights. Commenced with a motto of providing technocrats all over the country a platform to showcase their technical
                         skills and talent, Innovision has come a long way over the years since its inception.
